--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "@hono/node-server": "^1.8.2",
     "@sequelize/core": "7.0.0-alpha.38",
+    "@types/jest": "^29.5.12",
     "hono": "^4.1.2",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@jest/types": "^29.6.3",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "tsx": "^3.12.2",
     "typescript": "^5.4.2",
     "typescript-eslint": "^7.3.1"
