fix: trying to correct the actions

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,6 +30,6 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pnpm-
     - run: npm install -g pnpm
-    - run: pnpm ci
+    - run: pnpm install --frozen-lockfile
     - run: pnpm run build --if-present
     - run: pnpm test
