refactor: changed the path aliases in tsconfig and jestconfig to better fit testing needs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "baseUrl": ".",
     "outDir": "dist",
     "paths": {
-      "@/*": ["src/*"]
+      "@/domain/*": ["./src/domain/*"],
+      "@/infrastructure/*": ["./src/infrastructure/*"],
+      "@/tests/*": ["./tests/*"],
     },
     "experimentalDecorators": true,
     "esModuleInterop": true
