feat: implemented tests and fixed errors in ExercicioModel

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@hono/node-server": "^1.8.2",
     "@sequelize/core": "7.0.0-alpha.38",
+    "@sequelize/validator.js": "7.0.0-alpha.38",
     "@types/jest": "^29.5.12",
     "hono": "^4.1.2",
     "sqlite3": "^5.1.7"
