--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,11 @@
     "experimentalDecorators": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*", "tests/**/*"]
+  "include": [
+    "src/**/*", 
+    "tests/**/*",
+    "jest.config.js",
+    "eslint.config.js",
+    ".eslintrc.cjs"
+  ],
 }
