--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.8.2",
+    "@hono/zod-validator": "^0.2.0",
     "@sequelize/core": "7.0.0-alpha.38",
     "@sequelize/validator.js": "7.0.0-alpha.38",
     "@types/jest": "^29.5.12",
@@ -15,10 +16,12 @@
   "devDependencies": {
     "@jest/types": "^29.6.3",
     "@types/node": "^20.11.17",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
     "tsx": "^3.12.2",
     "typescript": "^5.4.2",
