--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,4 +31,8 @@ jobs:
           ${{ runner.os }}-pnpm-
     - run: npm install -g pnpm
     - run: pnpm install --frozen-lockfile
+    - name: Install wait-on
+      run: pnpm install -g wait-on
+    - name: Wait for /health endpoint
+      run: wait-on -t 15000 http://localhost:3000/health
     - run: pnpm test
