--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,7 +14,6 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@v3
@@ -31,8 +30,7 @@ jobs:
           ${{ runner.os }}-pnpm-
     - run: npm install -g pnpm
     - run: pnpm install --frozen-lockfile
-    - name: Install wait-on
-      run: pnpm install -g wait-on
+    - run: pnpm add -D wait-on
     - name: Wait for /health endpoint
-      run: wait-on -t 15000 http://localhost:3000/health
+      run: npx wait-on -t 15000 http://localhost:3000/health
     - run: pnpm test
