--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,8 @@ jobs:
     - run: npm install -g pnpm
     - run: pnpm install --frozen-lockfile
     - run: pnpm add -D wait-on
+    - name: Start application
+      run: pnpm dev
     - name: Wait for /health endpoint
       run: npx wait-on -t 15000 http://localhost:3000/health
     - run: pnpm test
