--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pnpm-
     - run: npm install -g pnpm
-    - run: pnpm install --frozen-lockfile
+    - run: pnpm i
     - run: pnpm add -D wait-on
     - name: Start application
       run: pnpm dev
