--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,6 @@ jobs:
     - run: npm install -g pnpm
     - run: pnpm add -D wait-on
     - run: pnpm i
-    - run: npm dev
+    - run: npm run dev
     - run: npx wait-on -t 15000 http://localhost:3000/health
     - run: pnpm test
