--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -21,16 +21,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Cache .pnpm-store
-      uses: actions/cache@v3
-      with:
-        path: ~/.pnpm-store
-        key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
-        restore-keys: |
-          ${{ runner.os }}-pnpm-
     - run: npm install -g pnpm
     - run: pnpm add -D wait-on
-    - run: pnpm i
-    - run: npm run dev
+    - run: pnpm install
+    - run: pnpm run dev
     - run: npx wait-on -t 15000 http://localhost:3000/health
     - run: pnpm test
