--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,6 @@ jobs:
     - name: install wait-on
       run: npm install -g wait-on
     - name: Run development server and wait for it to be ready
-      run: pnpm dev & wait-on http://localhost:3000
+      run: pnpm dev & wait-on http://localhost:3000/healtg
     - name: Run tests
       run: pnpm test
