--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/index.ts --import",
     "test": "jest",
     "build": "tsc"
   },
@@ -24,7 +24,7 @@
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
-    "tsx": "^3.12.2",
+    "tsx": "^3.14.0",
     "typescript": "^5.4.2",
     "typescript-eslint": "^7.3.1"
   },
