feat(env): installed env loader

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sequelize/core": "7.0.0-alpha.38",
     "@sequelize/validator.js": "7.0.0-alpha.38",
     "@types/jest": "^29.5.12",
+    "dotenv": "^16.4.5",
     "hono": "^4.1.2",
     "sqlite3": "^5.1.7",
     "zod": "^3.22.4"
